2012-02-17  Roland Levillain  <roland@lrde.epita.fr>

	Add tests to generate figures for the WADGMM 2010/LNCS submission.

	* apps/generic-skel/image2d-skel-unconstrained.cc,
	* apps/generic-skel/image2d-skel-with-end-points.cc,
	* apps/generic-skel/image3d-skel-unconstrained.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Display the size of the input.
	Time the thinning step.
	* milena/apps/generic-skel/test-mixed.in,
	* milena/apps/mesh-segm-skel/test-mixed.in:
	New.
	* apps/generic-skel/Makefile.am (generated_tests): Add test-mixed.
	(test-mixed): New target.
	(check-mixed): New (phony) target.
	* apps/mesh-segm-skel/Makefile.am: Likewise.
	($(generated_tests)): New target.
	(AM_CPPFLAGS): Add -I$(top_builddir)/milena so that
	mln/version.hh, which is a generated header, can be found by the
	compiler.

2011-06-13  Roland Levillain  <roland@lrde.epita.fr>

	Introduce a no-constraint functor to replace fun::p2b::tautology.

	* mln/fun/p2b/antilogy.hh,
	* mln/fun/p2b/tautology.hh:
	Do not include mln/core/alias/point2d.hh.
	* mln/topo/no_constraint.hh: New file.
	* mln/topo/skeleton/breadth_first_thinning.hh,
	* mln/topo/skeleton/priority_driven_thinning.hh:
	Use mln::topo::no_constraint instead of mln::fun::p2b::tautology.
	Do not include the standard header `algorithm'.
	* headers.mk, tests/unit_test/unit-tests.mk: Regen.

2011-07-13  Roland Levillain  <roland@lrde.epita.fr>

	Factor code of 2D skeletonizations in apps/generic-skel/.

	* mln/topo/is_not_end_point.hh: s/nbh/nbh_fg/.
	(is_not_end_point<I, N>::is_not_end_point(const Neighborhood<N>&)):
	New ctor.
	(is_not_end_point<I, N>::set_image): New method.
	(is_not_end_point<I, N>::ima_): Turn this reference into a pointer.
	Adjust.
	* mln/topo/is_simple_point2d.hh
	(mln::topo::is_simple_point2d<I, N>::operator())
	* mln/topo/detach_point.hh