@@ -1,4 +1,4 @@
-// Copyright (C) 2008, 2009, 2010 EPITA Research and Development
+// Copyright (C) 2008, 2009, 2010, 2013 EPITA Research and Development
 // Laboratory (LRDE)
 //
 // This file is part of the Milena Library.  This library is free
@@ -59,7 +59,7 @@
    morphed mln::complex_image (i.e., seen through image_if).  */
 #include "save_bin_alt.hh"
 
-#include "trimesh/misc.hh"
+#include "misc.hh"
 
 
 int
