@@ -1,3 +1,15 @@
+2013-08-29  Roland Levillain  <roland@lrde.epita.fr>
+
+	Fix header inclusions in Milena's apps/mesh-segm-skel.
+
+	* apps/mesh-segm-skel/mesh-complex-max-curv-1-collapse.cc,
+	* apps/mesh-segm-skel/mesh-complex-max-curv-2-collapse.cc,
+	* apps/mesh-segm-skel/mesh-complex-max-curv-extrema.cc,
+	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
+	* apps/mesh-segm-skel/mesh-complex-pinv-curv-segm.cc,
+	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
+	Here.
+
 2012-02-17  Roland Levillain  <roland@lrde.epita.fr>
 
 	Add tests to generate figures for the WADGMM 2010/LNCS submission.
